--- a/simpson_integrator.lpi
+++ b/simpson_integrator.lpi
@@ -65,6 +65,7 @@
     </CodeGeneration>
     <Linking>
       <Debugging>
+        <DebugInfoType Value="dsDwarf2Set"/>
         <TrashVariables Value="True"/>
         <GenGProfCode Value="True"/>
       </Debugging>
